# SoulEngine

./: CMakeLists.txt  ReadMe.txt
Executeable/: Rendy.lib  SoulEngine.lib
assets/models/OIAE/source/: material.lib
assets/models/maxwell/source/: material.lib
assets/shaders/: fragment_shader.glsl.txt  vertex_shader.glsl.txt
src/Demo/: Main.cpp
src/Rendy/: Mesh.cpp  Mesh.h  Model.h  Rend.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TriangleRenderer.h
src/SoulEngine/: Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  Collision.cpp  Collision.h  Component.cpp  Component.h  Entity.cpp  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  Resources.h  Shader.cpp  Shader.h  SoulEngine.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h  Window.cpp  Window.h  core.cpp  core.h  entity.h
